PPM-4: remove MapStruct and apply Model Mapper lib